--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "monet": "^0.9.1",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ramda": "github:types/npm-ramda#dist",
     "node-sass": "^4.14.1"
   }
 }
